Removed some old govno-code, added some new...